# gnupg-windows-libksba

./: .gitignore  CMakeLists.txt  libksba-config.h.in
src/: ksba.h.in
tests/: cert-basic.c  t-cms-parser.c
